--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "commander": "^8.1.0",
     "eslint": "^7.32.0",
+    "ora": "^6.0.0",
     "ts-node": "^10.2.1"
   },
   "devDependencies": {
