--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
+    "chalk": "^4.1.2",
     "commander": "^8.1.0",
     "eslint": "^7.32.0",
     "esm": "^3.2.25",
