--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "commander": "^8.1.0",
     "eslint": "^7.32.0",
     "esm": "^3.2.25",
+    "inquirer": "^8.1.2",
     "ora": "^6.0.0",
     "ts-node": "^10.2.1"
   },
