--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/commander": "^2.12.2",
+    "@types/inquirer": "^7.3.3",
     "typescript": "^4.4.2"
   }
 }
