Install node-keytar

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^7.32.0",
     "esm": "^3.2.25",
     "inquirer": "^8.1.2",
+    "keytar": "^7.7.0",
     "ora": "^6.0.0",
     "ts-node": "^10.2.1"
   },
