--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "esm": "^3.2.25",
     "inquirer": "^8.1.2",
     "keytar": "^7.7.0",
+    "node-localstorage": "^2.2.1",
     "ora": "^5.4.1",
     "ts-node": "^10.2.1"
   },
