--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@types/commander": "^2.12.2",
     "@types/inquirer": "^7.3.3",
+    "@types/node-localstorage": "^1.3.0",
     "typescript": "^4.4.2"
   }
 }
