--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "chalk": "^4.1.2",
+    "cli-table": "^0.3.6",
     "commander": "^8.1.0",
     "eslint": "^7.32.0",
     "esm": "^3.2.25",
