--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ts-node": "^10.2.1"
   },
   "devDependencies": {
+    "@types/cli-table": "^0.3.0",
     "@types/commander": "^2.12.2",
     "@types/inquirer": "^7.3.3",
     "@types/node-localstorage": "^1.3.0",
