--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chalk": "^4.1.2",
     "cli-table3": "^0.6.0",
     "commander": "^8.1.0",
+    "date-fns": "^2.23.0",
     "eslint": "^7.32.0",
     "esm": "^3.2.25",
     "inquirer": "^8.1.2",
