--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@types/commander": "^2.12.2",
     "@types/inquirer": "^7.3.3",
     "@types/node-localstorage": "^1.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
     "typescript": "^4.4.2"
   }
 }
