--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "habits-cli",
-  "version": "0.0.1",
+  "version": "0.0.6-alpha",
   "description": "Habits cli",
   "main": "src/index.ts",
   "bin": {
@@ -12,7 +12,9 @@
   "scripts": {
     "build": "tsc -p .",
     "lint": "tsc -p . --noEmit && eslint \\\"**/*.{js,ts}\\\" --quiet --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "npm run build",
+    "prepublish": "npm run lint"
   },
   "keywords": [
     "cli",
@@ -20,19 +22,21 @@
   ],
   "author": "Jimmy @lanyanxiang",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lanyanxiang/habits-cli/tree/master"
+  },
   "dependencies": {
     "axios": "^0.21.1",
     "chalk": "^4.1.2",
     "cli-table3": "^0.6.0",
     "commander": "^8.1.0",
     "date-fns": "^2.23.0",
-    "eslint": "^7.32.0",
     "esm": "^3.2.25",
     "inquirer": "^8.1.2",
     "keytar": "^7.7.0",
     "node-localstorage": "^2.2.1",
-    "ora": "^5.4.1",
-    "ts-node": "^10.2.1"
+    "ora": "^5.4.1"
   },
   "devDependencies": {
     "@types/commander": "^2.12.2",
@@ -40,6 +44,12 @@
     "@types/node-localstorage": "^1.3.0",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
+    "eslint": "^7.32.0",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
-  }
+  },
+  "files": [
+    "dist/**/*",
+    "bin/habits"
+  ]
 }
