--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     ],
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/no-inferrable-types": [
       "warn",
       {
