--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "date-fns": "^2.23.0",
     "esm": "^3.2.25",
     "inquirer": "^8.1.2",
+    "inquirer-autocomplete-prompt": "^1.4.0",
     "keytar": "^7.7.0",
     "node-localstorage": "^2.2.1",
     "ora": "^5.4.1"
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@types/commander": "^2.12.2",
     "@types/inquirer": "^7.3.3",
+    "@types/inquirer-autocomplete-prompt": "^1.3.3",
     "@types/node-localstorage": "^1.3.0",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
