--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "inquirer-autocomplete-prompt": "^1.4.0",
     "keytar": "^7.7.0",
     "node-localstorage": "^2.2.1",
-    "ora": "^5.4.1"
+    "ora": "^5.4.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/commander": "^2.12.2",
