--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bson": "^4.5.1",
     "chalk": "^4.1.2",
     "cli-table3": "^0.6.0",
     "commander": "^8.1.0",
