--- a/package.json
+++ b/package.json
@@ -1,8 +1,22 @@
 {
   "name": "habits-cli",
-  "version": "v0.2.609-alpha",
-  "description": "Habits cli",
-  "main": "src/index.ts",
+  "version": "v0.2.609-alpha.2",
+  "author": "Jimmy Lan @lanyanxiang",
+  "description": "The habits application seeks to help individuals build up healthy habits.",
+  "homepage": "https://lanyanxiang.github.io/habits-cli",
+  "bugs": {
+    "url": "https://github.com/lanyanxiang/issues"
+  },
+  "keywords": [
+    "cli",
+    "habits"
+  ],
+  "license": "GPL-3.0-or-later",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lanyanxiang/habits-cli"
+  },
+  "main": "dist/src/index.js",
   "bin": {
     "habits": "bin/habits"
   },
@@ -16,16 +30,6 @@
     "prepare": "npm run build",
     "prepublish": "npm run lint",
     "doc": "./scripts/open-browser.sh http://localhost:3000 && docsify serve docs/"
-  },
-  "keywords": [
-    "cli",
-    "habits"
-  ],
-  "author": "Jimmy @lanyanxiang",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/lanyanxiang/habits-cli"
   },
   "dependencies": {
     "axios": "^0.21.1",
