--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "habits-cli",
-  "version": "v0.2.609-alpha.3",
+  "version": "v0.2.609-alpha.8",
   "author": "Jimmy Lan @lanyanxiang",
   "description": "The habits application seeks to help individuals build up healthy habits.",
   "homepage": "https://lanyanxiang.github.io/habits-cli",
@@ -28,7 +28,6 @@
     "lint": "eslint . --quiet --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "npm run build",
-    "prepublish": "npm run lint",
     "doc": "./scripts/open-browser.sh http://localhost:3000 && docsify serve docs/"
   },
   "dependencies": {
@@ -61,7 +60,6 @@
   },
   "files": [
     "dist/**/*",
-    "bin/habits",
-    "docs/README.md"
+    "bin/habits"
   ]
 }
