Configure additional env variables

--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -33,5 +33,9 @@ jobs:
       - name: automerge
         uses: "pascalgn/automerge-action@v0.14.2"
         env:
+          MERGE_LABELS: "ready"
           MERGE_REMOVE_LABELS: "ready"
+          MERGE_REQUIRED_APPROVALS: 1
+          MERGE_DELETE_BRANCH: true
+          MERGE_DELETE_BRANCH_FILTER: "develop,master"
           GITHUB_TOKEN: "${{ secrets.ROBOT_TOKEN }}"
