--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -26,6 +26,6 @@ jobs:
           prettier_options: --write **/*.{ts,tsx,js,jsx,md}
           only_changed: True
           commit_message: "Prettify changed files"
-          commit_options: "--author='poly-team-bot <bot@thepolyteam.com>'"
+          commit_options: "--author='poly-team-bot <thepolyteam.tech@gmail.com>'"
         env:
-          GITHUB_TOKEN: ${{ secrets.ROBOT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
