Update auto-merge trigger condition

--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -4,7 +4,7 @@
 name: MS - Automerge
 
 on:
-  pull_request:
+  pull_request_target:
     types:
       - labeled
       - unlabeled
@@ -26,12 +26,8 @@ jobs:
   automerge:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - run: |
-          git config --local user.email "github@thepolyteam.com"
-          git config --local user.name "Happy Poly Team Bot"
       - name: automerge
-        uses: "pascalgn/automerge-action@v0.14.2"
+        uses: "pascalgn/automerge-action@v0.15.3"
         env:
           MERGE_LABELS: "ready"
           MERGE_REMOVE_LABELS: "ready"
