--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -13,11 +13,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           # Make sure the actual branch is checked out when running on pull requests
-          ref: ${{ github.head_ref }}
+          ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
           # This is important to fetch the changes to the previous commit
           fetch-depth: 0
       - name: Prettify code
-        uses: creyD/prettier_action@v3.1
+        uses: creyD/prettier_action@v4.2
         with:
           prettier_options: --write **/*.{ts,tsx,js,jsx,md}
           only_changed: True
