Update workflow running conditions
GitHub action doesn't seem to support pull requests from forked repositories very well, these running conditions have been throwing errors very often, therefore I decided to remove some of them.

--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -27,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: automerge
-        if: github.event.pull_request.head.repo.full_name == github.repository || github.event.action != "pull_request_review"
+        if: github.event.pull_request.head.repo.full_name == github.repository
         uses: "pascalgn/automerge-action@v0.15.3"
         env:
           MERGE_LABELS: "ready"
